cmake_minimum_required(VERSION 2.8)
project(RayTrace)
find_package( OpenCV REQUIRED )
find_package( OpenMP )
find_package( MPI REQUIRED )
message(STATUS "OpenCV library status:")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${MPI_INCLUDE_PATH})
if(${CMAKE_CXX_COMPILER_ID} STREQUAL "Intel")
    set(CMAKE_CXX_FLAGS "-g -Ofast -qopenmp")
endif()
if(${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
    set(CMAKE_CXX_FLAGS "-g -O3 -fopenmp")
endif()
#if(${CMAKE_CXX_COMPILER_ID} STREQUAL "PGI")
#    set(CMAKE_CXX_FLAGS "-g -fast -acc -Minfo -ta=tesla:cc35")
#endif()

add_executable(Raytrace raytrace.cpp point.cpp)
target_link_libraries(Raytrace ${OpenCV_LIBS} ${MPI_LIBRARIES})

