cmake_minimum_required(VERSION 2.8)
project(RayTrace)
find_package( OpenCV REQUIRED )
find_package( OpenMP )
find_package( MPI REQUIRED )
message(STATUS "OpenCV library status:")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${MPI_INCLUDE_PATH})
if(${CMAKE_CXX_COMPILER_ID} STREQUAL "Intel")
    set(CMAKE_CXX_FLAGS "-g -Ofast -qopenmp")
#    set(CMAKE_CXX_FLAGS "-g")
endif()
if(${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
    set(CMAKE_CXX_FLAGS "-g -O3 -fopenmp")
endif()
add_executable(RayTrace raytrace.cpp point.cpp polygon.cpp object.cpp kdtree.cpp sphere.cpp matrix.cpp)
target_link_libraries(RayTrace ${OpenCV_LIBS} ${MPI_LIBRARIES})

